--- a/test6/数据库设计.md
+++ b/test6/数据库设计.md
@@ -1,5 +1,3 @@
-﻿
-
 # 数据库设计 [首页](./README.md)
     
 <div id="USERS"></div>
@@ -98,7 +96,7 @@
      |term_id|NUMBER(6,0)| 主键|否| | |学期编号|
      |courses_ID|NUMBER(6,0)| 外键|否| | |学期开课的课程|
     
-<div id="coursesBytec></div>
+<div id="coursesBy_tea></div>
      
  - ## coursesBy_tea表（老师授课列表）
      
