--- a/test6/数据库设计.md
+++ b/test6/数据库设计.md
@@ -129,3 +129,13 @@
       |DEPARTMENT_ID|NUMBER(8,0)|主键|否| | | 部门编号|
       |DEPARTMENT_NAME|VARCHAR2(50 BYTE)|主键|否| | | 部门名称|
          
+<div id="courses_teachers"></div>
+
+- ## courses_teachers表（老师选课列表）
+
+    |字段|类型|主键，外键|可以为空|默认值|约束|说明|
+    |:-------:|:-------------:|:------:|:----:|:---:|:----:|:----------|
+    |courses_ID|NUMBER(6,0)| 主键|否| | |课程编号|
+    |term_id|NUMBER(6,0)| 外键|否| | |学期编号|
+    |teachers_id|NUMBER(6,0)| 外键|否| | |老师编号|
+    |course_name|VARCHAR2(400 BYTE)| |否| | | 课程名字|         
