--- a/test6/数据库设计.md
+++ b/test6/数据库设计.md
@@ -66,28 +66,6 @@
     |students_ID|NUMBER(6,0)| 外键|否| | |学生id|
     |test_content|VARCHAR2(400,0))| |否| | |实验内容|
     |test_time |VARCHAR2(50,0)| |否| | |批改日期|
- 
-<div id="courses_teachers></div>
- 
-- ## courses_teachers表（老师选课列表）
- 
-     |字段|类型|主键，外键|可以为空|默认值|约束|说明|
-     |:-------:|:-------------:|:------:|:----:|:---:|:----:|:----------|
-     |courses_ID|NUMBER(6,0)| 主键|否| | |课程编号|
-     |term_id|NUMBER(6,0)| 外键|否| | |学期编号|
-     |teachers_id|NUMBER(6,0)| 外键|否| | |老师编号|
-     |course_name|VARCHAR2(400 BYTE)| |否| | | 课程名字|
-
-<div id="courses_teachers></div>
- 
-- ## courses_students表（学生选课列表）
- 
-     |字段|类型|主键，外键|可以为空|默认值|约束|说明|
-     |:-------:|:-------------:|:------:|:----:|:---:|:----:|:----------|
-     |courses_ID|NUMBER(6,0)| 主键|否| | |课程编号|
-     |students_id|NUMBER(6,0)| 外键|否| | |学生学号|
-     |term_id|NUMBER(6,0)| 外键|否| | |学期编号|
-     |course_name_teachers|VARCHAR2(400 BYTE)| |否| | | 老师授课课程名字|
      
 <div id="term"></div>
  
@@ -141,3 +119,14 @@
     |term_id|NUMBER(6,0)| 外键|否| | |学期编号|
     |teachers_id|NUMBER(6,0)| 外键|否| | |老师编号|
     |course_name|VARCHAR2(400 BYTE)| |否| | | 课程名字|      
+
+<div id="courses_students></div>
+         
+- ## courses_students表（学生选课列表）
+ 
+     |字段|类型|主键，外键|可以为空|默认值|约束|说明|
+     |:-------:|:-------------:|:------:|:----:|:---:|:----:|:----------|
+     |courses_ID|NUMBER(6,0)| 主键|否| | |课程编号|
+     |students_id|NUMBER(6,0)| 外键|否| | |学生学号|
+     |term_id|NUMBER(6,0)| 外键|否| | |学期编号|
+     |course_name_teachers|VARCHAR2(400 BYTE)| |否| | | 老师授课课程名字|
