--- a/test6/数据库设计.md
+++ b/test6/数据库设计.md
@@ -120,13 +120,13 @@
     |teachers_id|NUMBER(6,0)| 外键|否| | |老师编号|
     |course_name|VARCHAR2(400 BYTE)| |否| | | 课程名字|      
 
-<div id="courses_students></div>
-         
+<div id="courses_teachers"></div>
+
 - ## courses_students表（学生选课列表）
- 
-     |字段|类型|主键，外键|可以为空|默认值|约束|说明|
-     |:-------:|:-------------:|:------:|:----:|:---:|:----:|:----------|
-     |courses_ID|NUMBER(6,0)| 主键|否| | |课程编号|
-     |students_id|NUMBER(6,0)| 外键|否| | |学生学号|
-     |term_id|NUMBER(6,0)| 外键|否| | |学期编号|
-     |course_name_teachers|VARCHAR2(400 BYTE)| |否| | | 老师授课课程名字|
+
+    |字段|类型|主键，外键|可以为空|默认值|约束|说明|
+    |:-------:|:-------------:|:------:|:----:|:---:|:----:|:----------|
+    |courses_ID|NUMBER(6,0)| 主键|否| | |课程编号|
+    |students_id|NUMBER(6,0)| 外键|否| | |学生学号|
+    |term_id|NUMBER(6,0)| 外键|否| | |学期编号|
+    |course_name_teachers|VARCHAR2(400 BYTE)| |否| | | 老师授课课程名字|  
