--- a/test6/数据库设计.md
+++ b/test6/数据库设计.md
@@ -76,30 +76,6 @@
      |term_id|NUMBER(6,0)| 主键|否| | |学期编号|
      |courses_ID|NUMBER(6,0)| 外键|否| | |学期开课的课程|
     
-<div id="coursesBy_tea></div>
-     
-- ## coursesBy_tea表（老师授课列表）
-     
-     |字段|类型|主键，外键|可以为空|默认值|约束|说明|
-     |:-------:|:-------------:|:------:|:----:|:---:|:----:|:----------|
-     |courses_ID|NUMBER(6,0)| 主键|否| | |课程编号|
-     |teachers_ID|VARCHAR2(50 BYTE)|外键|否| | | 老师编号|
-     |course_name|VARCHAR2(400 BYTE)| |否| | | 课程名字|
-     |term_id|NUMBER(6,0)| 外键|否| | |学期编号|
-     |course_term|VARCHAR2(400 BYTE)| |否| | | 开课学期|
-    
-<div id="coursesBy_stu></div>
-     
-- ## coursesBy_stu表（学生个人课程列表）
-     
-     |字段|类型|主键，外键|可以为空|默认值|约束|说明|
-     |:-------:|:-------------:|:------:|:----:|:---:|:----:|:----------|
-     |courses_ID|NUMBER(6,0)| 主键|否| | |课程编号|
-     |STUDENT_ID|VARCHAR2(50 BYTE)|外键|否| | | 学生的学号|
-     |course_name_teachers|VARCHAR2(400 BYTE)| |否| | | 老师授课课程名字|
-     |term_id|NUMBER(6,0)| 外键|否| | |学期编号|   
-     |course_term|VARCHAR2(400 BYTE)| |否| | | 开课学期|
-         
 <div id="department"></div>
      
 - ## DEPARTMENT表（部门表）
@@ -130,3 +106,16 @@
     |students_id|NUMBER(6,0)| 外键|否| | |学生学号|
     |term_id|NUMBER(6,0)| 外键|否| | |学期编号|
     |course_name_teachers|VARCHAR2(400 BYTE)| |否| | | 老师授课课程名字|  
+
+<div id="coursesBy_tea"></div>
+   
+- ## coursesBy_tea表（老师授课列表）
+
+    |字段|类型|主键，外键|可以为空|默认值|约束|说明|
+    |:-------:|:-------------:|:------:|:----:|:---:|:----:|:----------|
+    |courses_ID|NUMBER(6,0)| 主键|否| | |课程编号|
+    |teachers_ID|VARCHAR2(50 BYTE)|外键|否| | | 老师编号|
+    |course_name|VARCHAR2(400 BYTE)| |否| | | 课程名字|
+    |term_id|NUMBER(6,0)| 外键|否| | |学期编号|
+    |course_term|VARCHAR2(400 BYTE)| |否| | | 开课学期|        
+         
