--- a/test6/用例/修改用户信息.md
+++ b/test6/用例/修改用户信息.md
@@ -15,7 +15,7 @@
 无
 
 ## 3. 界面设计
-- 界面参照: https://zwdbox.github.io/is_analysis/test6/ui/顶部菜单.html
+- 界面参照: https://201510414128.github.io/is_analysis/test6/ui3/修改用户信息.html
 - API接口调用
     - 接口1：[getUserInfo](../接口/getUserInfo.md)
     - 接口2：[setUserInfo](../接口/setUserInfo.md)
