--- a/test6/用例/某课程学生列表.md
+++ b/test6/用例/某课程学生列表.md
@@ -1,9 +1,9 @@
 ﻿
 
-# “学生列表”用例 [返回](../README.md)
+# “某课程学生列表”用例 [返回](../README.md)
 ## 1. 用例规约
 
-|用例名称|学生列表|
+|用例名称|某课程学生列表|
 |-------|:-------------|
 |功能|以表形式的显示出某课程所有学生的信息|
 |参与者|老师|
@@ -16,7 +16,7 @@
 ![sequence学生列表](../sequence学生列表.png) 
 
 ## 3. 界面设计
-- 界面参照: https://zwdbox.github.io/is_analysis/test6/ui/index.html
+- 界面参照: https://201510414128.github.io/is_analysis/test6/ui3/某课程学生列表.html
 - API接口调用
     - 接口1：[getStudents](../接口/getStudents.md) 
 
