--- a/test6/用例/查看课程实验成绩.md
+++ b/test6/用例/查看课程实验成绩.md
@@ -1,8 +1,8 @@
 ﻿
-# “查看成绩”用例 [返回](../README.md)
+# “查看课程实验成绩”用例 [返回](../README.md)
 ## 1. 用例规约
 
-|用例名称|查看成绩|
+|用例名称|查看课程实验成绩|
 |-------|:-------------|
 |功能|学生查看某学期某课程自己的每个实验的实验成绩及实验评价|
 |参与者|学生|
@@ -15,7 +15,7 @@
 ![sequence1](../sequence查看成绩.png) 
 
 ## 3. 界面设计
-- 界面参照: https://zwdbox.github.io/is_analysis/test6/ui/查看课程实验成绩.html
+- 界面参照: https://201510414128.github.io/is_analysis/test6/ui3/查看课程实验成绩.html
 - API接口调用
     - 接口1：[getOneStudentResults](../接口/getOneStudentResults.md) 
 
